Fix overflow messages zone + marked back

--- a/src/public/style/style.css
+++ b/src/public/style/style.css
@@ -183,7 +183,10 @@ button#send {
   
   color: #000;
   width: calc(100% - 200px);
-  float: left;
+    float: left;
+    overflow: hidden;
+    
+  overflow-y: scroll;
 }
 
 .chat-messages .messages_wrapper {
